force-app/main/default/objects/Compliances_Item__c/Compliances_Item__c.object-meta.xml
<CustomObject>
    <label>Compliance Item</label>
    <nameField>
        <label>Compliance Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>