force-app/main/default/objects/Compliances_Item__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <referenceTo>Compliance_Library__c</referenceTo>
    <relationshipLabel>Compliance Items</relationshipLabel>
    <relationshipName>List_of_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>