force-app/main/default/objects/Compliances_Item__c/fields/Compliance_Name__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Name__c</fullName>
    <formula>Compliance__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Name</label>
    <type>Text</type>
</CustomField>