force-app/main/default/objects/Compliances_Item__c/fields/Criticality_Level__c.field-meta.xml
<CustomField>
    <fullName>Criticality_Level__c</fullName>
    <label>Criticality Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>