force-app/main/default/objects/Compliances_Item__c/fields/Impact_of_Non_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Impact_of_Non_Compliance__c</fullName>
    <label>Impact of Non Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Imprisonment</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>