force-app/main/default/objects/Compliances_Item__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form Based</fullName>
            </value>
            <value>
                <fullName>Date Based</fullName>
            </value>
            <value>
                <fullName>Regulator Based</fullName>
            </value>
            <value>
                <fullName>Event Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>