force-app/main/default/objects/Compliances_Item__c/fields/Task_Creation_Days_Before_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Creation_Days_Before_Due_Date__c</fullName>
    <label>Task Creation Days Before Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>