force-app/main/default/objects/Compliances_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compliance__c</columns>
    <columns>Frequency__c</columns>
    <columns>Impact_of_Non_Compliance__c</columns>
    <columns>Submission_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>